// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Hall > should correspond default layout 1`] = `
<div>
  <div
    class="_hall_b72db8"
    data-test-id="hall"
  >
    <div
      class="_hallScreen_b72db8"
      data-test-id="hall-screen"
    />
  </div>
</div>
`;

exports[`Hall > should support the "children" prop 1`] = `
<div>
  <div
    class="_hall_b72db8"
    data-test-id="hall"
  >
    <div
      class="_hallScreen_b72db8"
      data-test-id="hall-screen"
    />
    Children
  </div>
</div>
`;
